# Maze_Tycoon

./: .coverage  .coveragerc  Makefile  README.md  coverage_summary.md  pyproject.toml  requirements.txt  run_all_trials.ps1
config/: astar_manhattan.yaml  astar_octile.yaml  bfs_prelim.yaml  defaults.yaml
docs/: MazeTycoonNotes.txt  design-notes.md
outputs/: prelim-astar-manhattan-20251031-165033.csv  prelim-astar-octile-20251031-162659.csv  prelim-bfs-20251031-162457.csv
results/: results_a_star_euclidean_dfs_backtracker_31x31_t50.jsonl  results_a_star_euclidean_prim_31x31_t50.jsonl  results_a_star_manhattan_dfs_backtracker_31x31_t50.jsonl  results_a_star_manhattan_prim_31x31_t50.jsonl  results_a_star_octile_dfs_backtracker_31x31_t50.jsonl  results_a_star_octile_prim_31x31_t50.jsonl  results_bfs_dfs_backtracker_31x31_t50.jsonl  results_bfs_prim_31x31_t50.jsonl  results_bidirectional_a_star_euclidean_dfs_backtracker_31x31_t50.jsonl  results_bidirectional_a_star_euclidean_prim_31x31_t50.jsonl  results_bidirectional_a_star_manhattan_dfs_backtracker_31x31_t50.jsonl  results_bidirectional_a_star_manhattan_prim_31x31_t50.jsonl  results_bidirectional_a_star_octile_dfs_backtracker_31x31_t50.jsonl  results_bidirectional_a_star_octile_prim_31x31_t50.jsonl  results_dijkstra_dfs_backtracker_31x31_t50.jsonl  results_dijkstra_prim_31x31_t50.jsonl
saves/: game_state.json
scripts/: Makefile  coverage_check.py  coveragerc  pytest.ini  run_experiment.py  show_mazes.py
tests/: conftest.py  test_a_star.py  test_aggregations.py  test_app.py  test_bfs.py  test_dijkstra.py  (+9 more)
(+42 files in other folders)
