[project]
name = "maze_tycoon"
version = "0.1.0"
description = "Maze generation, solving, and visualization toolkit"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Marvin Royal", email = "marvin@example.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml>=6.0",
    "pygame>=2.5",
]

[project.scripts]
maze-tycoon-exp = "maze_tycoon.game.app:main"
